Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
When unspecified exception occurs inside handler, TTwisted server disconnects the client.
Many other languages and non TTwisted/Tornado servers sends TApplicationException in such cases.
There is even a test case that tries to assert this behavior for TTwisted but the test is broken in a way it fails to detect the failure.
Attachments
Issue Links
- is related to
-
THRIFT-3602 Make Tornado server send exception on unexpected handler error
- Closed
- relates to
-
THRIFT-1820 Python services don't transmit a TException to clients when one is raised.
- Open
-
THRIFT-3349 Python server does not handle processor exception
- Closed
-
THRIFT-3607 Unify exception handling policy of TProcessor
- Open
- links to